2013-03-12  Niibe Yutaka  <gniibe@fsij.org>

	* tool/stlinkv2.py (stlinkv2.exit_from_debug_swd)
	(stlinkv2.exit_from_debug_swim): New.
	(stlinkv2.start): Call exit_from_debug_swd or
	exit_from_debug_swim.

2013-03-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (calculate_regnual_entry_address): New.
	(main): Use calculate_regnual_entry_address for entry point.

2013-03-08  Niibe Yutaka  <gniibe@fsij.org>

	Relocatable reGNUal.

	* regnual/regnual.ld (MEMORY): 0x1400 was the value of Gnuk 1.0.1.
	Keep this value.
	(.text): Include .text.entry next to the .vectors.
	(.got): New.

	* regnual/sys.c (entry): Now, it's at .text.entry section.
	Do relocations.
	Don't use absolute values which causes relocations, but
	access at GOT.

	* regnual/Makefile (CFLAGS): Add -fpie.

2013-03-07  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_stm32f103.c (handle_setup0): Fix selecting handler.

	Follow the USB stack change.

	* regnual/regnual.c (usb_cb_device_reset): Rename from
	regnual_device_reset.
	(mem): Change type to uint32_t.
	(mem_info): Removed.
	(fetch): Avoid pointer punning.
	(usb_cb_ctrl_write_finish): Rename from regnual_ctrl_write_finish.
	(usb_cb_setup): Rename from regnual_setup.
	(usb_cb_get_descriptor): Rename from regnual_get_descriptor.
	(usb_cb_handle_event): Rename regnual_usb_event.
	(usb_cb_interface): Rename regnual_interface.
	(Device_Method): Remove.
	(usb_cb_get_descriptor): Not use struct Descriptor.

2013-03-06  Niibe Yutaka  <gniibe@fsij.org>

	USB stack implementation improvement.

	* src/usb_lld.c (Device_Method, method_p): Remove.
	(usb_interrupt_handler): Call usb_cb_device_reset.
	(std_get_descriptor): Call usb_cb_get_descriptor.
	(std_set_configuration): Call usb_cb_handle_event.
	(std_get_status, std_get_interface, std_set_interface): Call
	usb_cb_interface.
	(handle_setup0): Call usb_cb_setup.
	(handle_in0): Call usb_cb_handle_event and
	usb_cb_ctrl_write_finish.
	(request_handler): Remove.