@@ -1,3 +1,9 @@
+2013-03-13  Niibe Yutaka  <gniibe@fsij.org>
+
+	* ChibiOS_2.0.8/os/ports/GCC/ARMCMx/cmsis/core_cm3.c (__STREXB)
+	(__STREXH, __STREXW): Specify R2 to avoid %0 and %2 will be same
+	register.  This is for newer binutils (>= 2.22).
+
 2013-03-12  Niibe Yutaka  <gniibe@fsij.org>
 
 	* tool/stlinkv2.py (stlinkv2.exit_from_debug_swd)
